remove stray div and format code

--- a/index.html
+++ b/index.html
@@ -1,74 +1,91 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <title>Landing Page</title>
-    <meta charset="utf-8" />
-    <link rel="stylesheet" href="styles.css" />
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <div class="content upper-filling">
-    <div class="header upper-filling">
-      <img class="header-logo" src="images/logo.png" alt="logo">
-      <ul class="links-list">
-        <li><a href="#">Instagram</a></li>
-        <li><a href="#">Etsy</a></li>
-        <li><a href="#">VK</a></li>
-      </ul>
-    </div>
+      <div class="header upper-filling">
+        <img class="header-logo" src="images/logo.png" alt="logo">
+        <ul class="links-list">
+          <li><a href="#">Instagram</a></li>
+          <li><a href="#">Etsy</a></li>
+          <li><a href="#">VK</a></li>
+        </ul>
+      </div>
+
       <div class="upper-content">
         <div class="left-info-block">
           <div class="site-header">Polymer Clay Jewelry</div>
           <div class="site-description">
-            <p>Welcome to Nature's Touch, where the beauty of the natural world meets artistic expression. I'm Olesia, and I'm glad to share my passion for crafting exquisite polymeric clay jewelry with you.</p>
-            
-<p>At Nature's Touch, each piece is a unique work of art inspired by the enchanting wonders of nature. Our collection features stunning floweric and berry earrings, bracelets, and more, meticulously handcrafted to capture the essence of the outdoors. Every creation is a celebration of the delicate balance between artistry and the untouched beauty found in the natural world.</p>
+            <p>
+              Welcome to Nature's Touch, where the beauty of the natural world
+              meets artistic expression. I'm Olesia, and I'm glad to share my
+              passion for crafting exquisite polymeric clay jewelry with you.
+            </p>
+
+            <p>
+              At Nature's Touch, each piece is a unique work of art inspired by
+              the enchanting wonders of nature. Our collection features stunning
+              floweric and berry earrings, bracelets, and more, meticulously
+              handcrafted to capture the essence of the outdoors. Every creation
+              is a celebration of the delicate balance between artistry and the
+              untouched beauty found in the natural world.
+            </p>
           </div>
           <button class="sign-up-button">Sign Up</button>
         </div>
-        <img class="main-image" src="/images/flowers-owner.jpg" alt="owner-photo" />
+        <img
+          class="main-image"
+          src="/images/flowers-owner.jpg"
+          alt="owner-photo">
       </div>
     </div>
-      <div class="first-middle-content">
-        <div class="subheader">Some random information</div>
-        <div class="images-container">
-          <div class="small-description-block">
-            <div class="bordered-image">
-              <img src="" alt="image" />
-            </div>
-            <div class="image-description">This is image description</div>
+
+    <div class="first-middle-content">
+      <div class="subheader">Some random information</div>
+      <div class="images-container">
+        <div class="small-description-block">
+          <div class="bordered-image">
+            <img src="" alt="image">
           </div>
-          <div class="small-description-block">
-            <div class="bordered-image">
-              <img src="" alt="image" />
-            </div>
-            <div class="image-description">This is image description</div>
+          <div class="image-description">This is image description</div>
+        </div>
+        <div class="small-description-block">
+          <div class="bordered-image">
+            <img src="" alt="image">
           </div>
-          <div class="small-description-block">
-            <div class="bordered-image">
-              <img src="" alt="image" />
-            </div>
-            <div class="image-description">This is image description</div>
+          <div class="image-description">This is image description</div>
+        </div>
+        <div class="small-description-block">
+          <div class="bordered-image">
+            <img src="" alt="image">
           </div>
-          <div class="small-description-block">
-            <div class="bordered-image">
-              <img src="" alt="image" />
-            </div>
-            <div class="image-description">This is image description</div>
+          <div class="image-description">This is image description</div>
+        </div>
+        <div class="small-description-block">
+          <div class="bordered-image">
+            <img src="" alt="image">
           </div>
+          <div class="image-description">This is image description</div>
         </div>
       </div>
-      <div class="second-middle-content">
-        <div class="text-block">There will be rewiev or inspirational quote</div>
-        <div class="text-block-signature">Signature</div>
-      </div>
-      <div class="lower-content">
-        <div class="sign-up-box">
-          <div class="text-block">
-            <div "text-content-header">Call to action! It's time!</div>
-            <div "text-content">Sing up! Sign up!</div>
-          </div>
-          <button "lower-sign-up-button">Sing up</button>
+    </div>
+
+    <div class="second-middle-content">
+      <div class="text-block">There will be rewiev or inspirational quote</div>
+      <div class="text-block-signature">Signature</div>
+    </div>
+
+    <div class="lower-content">
+      <div class="sign-up-box">
+        <div class="text-block">
+          <div class="text-content-header">Call to action! It's time!</div>
+          <div class="text-content">Sing up! Sign up!</div>
         </div>
+        <button class="lower-sign-up-button">Sing up</button>
       </div>
     </div>
 
