fix footer text

--- a/index.html
+++ b/index.html
@@ -101,6 +101,6 @@
       </div>
     </div>
 
-    <div class="footer">Copyright @ Nature Touch 2024</div>
+    <div class="footer">Nature Touch 2024</div>
   </body>
 </html>
