--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
         <img
           class="main-image"
-          src="/images/flowers-owner.jpg"
+          src="/images/owner.jpg"
           alt="owner-photo">
       </div>
     </div>
