fix paths to images

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="content upper-filling">
       <div class="header upper-filling">
-        <img class="header-logo" src="images/logo.png" alt="logo">
+        <img class="header-logo" src="./images/logo.png" alt="logo">
         <ul class="links-list">
           <li><a href="#">Instagram</a></li>
           <li><a href="#">Etsy</a></li>
@@ -37,7 +37,7 @@
         </div>
         <img
           class="main-image"
-          src="/images/owner.jpg"
+          src="./images/owner.jpg"
           alt="owner-photo">
       </div>
     </div>
@@ -48,26 +48,26 @@
       <div class="images-container">
         <div class="small-description-block">
           <div class="bordered-image">
-            <img src="/images/berry-bracelet.jpg" alt="berry-bracelet">
+            <img src="./images/berry-bracelet.jpg" alt="berry-bracelet">
           </div>
           <div class="image-description">Rapsberry and blueberry bracelet</div>
         </div>
 
         <div class="small-description-block">
           <div class="bordered-image">
-            <img src="/images/flowers.jpg" alt="earrings with flowers">
+            <img src="./images/flowers.jpg" alt="earrings with flowers">
           </div>
           <div class="image-description">Soft pink earrings</div>
         </div>
         <div class="small-description-block">
           <div class="bordered-image">
-            <img src="images/flower-earrings.jpg" alt="violet earrings">
+            <img src="./images/flower-earrings.jpg" alt="violet earrings">
           </div>
           <div class="image-description">Violet earrings</div>
         </div>
         <div class="small-description-block">
           <div class="bordered-image">
-            <img src="images/peonies.jpg" alt="peony earrings">
+            <img src="./images/peonies.jpg" alt="peony earrings">
           </div>
           <div class="image-description">Peony earrings</div>
         </div>
