--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               earrings, bracelets, and more that capture the simple, natural
               beauty around us. Every creation is special because it's made with
               love and passion. Dive into the charm of polymeric clay jewelry,
-              where each piece tells a story of the love I put into our craft!
+              where each piece tells a story of the love I put into my craft!
             </p>
           </div>
           <button class="sign-up-button">Sign Up</button>
