--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Landing Page</title>
+    <title>Nature Touch</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles.css">
   </head>
@@ -35,10 +35,7 @@
           </div>
           <button class="sign-up-button">Sign Up</button>
         </div>
-        <img
-          class="main-image"
-          src="./images/owner.jpg"
-          alt="owner-photo">
+        <img class="main-image" src="./images/owner.jpg" alt="owner-photo">
       </div>
     </div>
 
